# GraphicsDemo

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CODEBUDDY.md  Common.pri  GraphicsDemo.pro  README.md  TECHNICAL_REVIEW.md
ColorConversionTests/: ColorConversionTests.pro  cmyk_conversion_report.md  tst_colorconversion  tst_colorconversion.cpp
ICC Profile/CMYK/: EpsonWideCMYK_Ver2.icc
LittleCMSTest/: LittleCMSTest.pro  main.cpp
NetWorkTest/: NetWorkTest.pro  main.cpp
Src/: Common.pri  CommonDefs.h  QCommonDefs.h  Src.pro
Src/App/: SingleInstance.cpp  SingleInstance.h  main.cpp
Src/ColorTrans/: colortransform.cpp  colortransform.h
Src/Commands/: Commands.cpp  Commands.h
Src/Items/: BezierCurveItem.cpp  BezierCurveItem.h  CanvasItem.cpp  CanvasItem.h  EllipseItem.cpp  EllipseItem.h  FreehandItem.cpp  FreehandItem.h  GraphicsItemGroup.cpp  GraphicsItemGroup.h  IGraphicsItem.cpp  IGraphicsItem.h  ImageItem.cpp  ImageItem.h  LineItem.cpp  LineItem.h  RectItem.cpp  RectItem.h  ResizeHandleItem.cpp  ResizeHandleItem.h  TextItem.cpp  TextItem.h
Src/NetWork/: QHttp.cpp  QHttp.h
Src/Qt-Color-Widgets/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  README.md  color_widgets.pro  refactor.sh
Src/Qt-Color-Widgets/.reuse/: dep5
Src/Qt-Color-Widgets/cmake/: QtColorWidgets-config.cmake  install.cmake  versioning.cmake
Src/Qt-Color-Widgets/cmake/modules/: ProjectVersioning.cmake
Src/Qt-Color-Widgets/cmake/modules/ProjectVersioning/: version.h.in
Src/Qt-Color-Widgets/color_widgets_designer_plugin/: CMakeLists.txt  color_2d_slider_plugin.cpp  color_2d_slider_plugin.hpp  color_line_edit_plugin.cpp  color_line_edit_plugin.hpp  color_list_plugin.cpp  color_list_plugin.hpp  color_palette_widget_plugin.cpp  color_palette_widget_plugin.hpp  color_preview_plugin.cpp  color_preview_plugin.hpp  color_selector_plugin.cpp  color_selector_plugin.hpp  color_wheel_plugin.cpp  color_wheel_plugin.hpp  color_widget_plugin_collection.cpp  color_widget_plugin_collection.hpp  gradient_editor_plugin.cpp  gradient_editor_plugin.hpp  gradient_slider_plugin.cpp  gradient_slider_plugin.hpp  hue_slider_plugin.cpp  hue_slider_plugin.hpp  swatch_plugin.cpp  swatch_plugin.hpp
Src/Qt-Color-Widgets/gallery/: CMakeLists.txt  screenshot.cpp
Src/Qt-Color-Widgets/include/QtColorWidgets/: AbstractWidgetList  BoundColorSelector  CMakeLists.txt  ColorDelegate  ColorDialog  ColorListWidget  ColorPreview  ColorSelector  ColorWheel  GradientEditor  GradientListModel  GradientSlider  HarmonyColorWheel  HueSlider  abstract_widget_list.hpp  bound_color_selector.hpp  color_2d_slider.hpp  color_delegate.hpp  color_dialog.hpp  color_line_edit.hpp  color_list_widget.hpp  color_names.hpp  color_palette.hpp  color_palette_model.hpp  color_palette_widget.hpp  color_preview.hpp  color_selector.hpp  color_utils.hpp  color_wheel.hpp  color_wheel_private.hpp  colorwidgets_global.hpp  gradient_delegate.hpp  gradient_editor.hpp  gradient_helper.hpp  gradient_list_model.hpp  gradient_slider.hpp  harmony_color_wheel.hpp  hue_slider.hpp  qt_compatibility.hpp  swatch.hpp
Src/Qt-Color-Widgets/resources/QtColorWidgets/: CMakeLists.txt
Src/Qt-Color-Widgets/src/QtColorWidgets/: CMakeLists.txt  abstract_widget_list.cpp  bound_color_selector.cpp  color_2d_slider.cpp  color_delegate.cpp  color_dialog.cpp  color_dialog.ui  color_line_edit.cpp  color_list_widget.cpp  color_names.cpp  color_palette.cpp  color_palette_model.cpp  color_palette_widget.cpp  color_palette_widget.ui  color_preview.cpp  color_selector.cpp  color_utils.cpp  color_wheel.cpp  gradient_editor.cpp  gradient_list_model.cpp  gradient_slider.cpp  harmony_color_wheel.cpp  hue_slider.cpp  swatch.cpp
Src/QtGradientEditor/: README.md  qtcolorbutton.cpp  qtcolorbutton.h  qtcolorline.cpp  qtcolorline.h  qtgradientdialog.cpp  qtgradientdialog.h  qtgradientdialog.ui  qtgradienteditor.cpp  qtgradienteditor.h  qtgradienteditor.qrc  qtgradienteditor.ui  qtgradientmanager.cpp  qtgradientmanager.h  qtgradientstopscontroller.cpp  qtgradientstopscontroller.h  qtgradientstopsmodel.cpp  qtgradientstopsmodel.h  qtgradientstopswidget.cpp  qtgradientstopswidget.h  qtgradientutils.cpp  qtgradientutils.h  qtgradientview.cpp  qtgradientview.h  qtgradientviewdialog.cpp  qtgradientviewdialog.h  qtgradientviewdialog.ui  qtgradientwidget.cpp  qtgradientwidget.h
Src/UI/: AlignLayoutDialog.cpp  AlignLayoutDialog.h  ExportImageDialog.cpp  ExportImageDialog.h  GradientDialog.cpp  GradientDialog.h  GraphicsScene.cpp  GraphicsScene.h  ImportImageDialog.cpp  ImportImageDialog.h  NewFileDialog.cpp  NewFileDialog.h  PropertyPanel.cpp  PropertyPanel.h  RulerBar.cpp  RulerBar.h  SettingsDialog.cpp  SettingsDialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qatgraphicsview.cpp  qatgraphicsview.h
Src/Utils/: AlignmentUtils.cpp  AlignmentUtils.h  ColorUtils.cpp  ColorUtils.h  ImageUtils.cpp  ImageUtils.h  NetWorkDefs.h  NetWorkUtils.cpp  NetWorkUtils.h
Src/resources/: resources.qrc  style.qss
Src/translations/: GraphicsDemo_zh_CN.ts  translations.qrc
Tests/: Tests.pro  tst_alignment.cpp
WidgetTest/: CLAUDE.md  WidgetTest.pro  colormanager.cpp  colormanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
